[package]
name = "berry-leaderboards"
version = "1.0.0"
description = "A desktop and mobile leaderboards viewer for Berry Dash"
authors = ["Lncvrt"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["macos-private-api"] }
tauri-plugin-opener = "2.2.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
window-vibrancy = "0.6.0"
tauri-plugin-os = "2.2.1"

